fix captcha spacing

--- a/style.css
+++ b/style.css
@@ -568,6 +568,11 @@ section.contact .query-form form textarea::placeholder {
   color: #9da5ac;
 }
 
+section.contact .query-form form .captcha {
+  max-width: 350px;
+  margin: 1rem auto;
+}
+
 section.contact .query-form form button {
   margin-top: 1.5rem;
   font-size: 18px;
